css/frame.css
/* ... */
.viz-group-wrapper .viz-group .customize-section-back:hover {
	border-left-color: #0073aa;
	outline: 0;
	color: #0073aa;
	background: #f3f3f5;
}

.viz-group-wrapper .viz-group .customize-section-back:before {
	position: relative;
	top: -11px;
	left: -2px;
	font: 400 20px/72px dashicons;
	content: "\f341";
}

.viz-group-wrapper.full-height {
	float: left;
	position: relative;
	width: 100%;
	height: 100%;
	margin: 0;
}

.viz-group.bottom-fixed {
	display: block;
	position: absolute;
	bottom: 0;
	width: 100%;
}

.viz-group ul li h2,
.viz-group ul li h3 {
	padding: 7px 15px 7px 35px;
}

.viz-group h2 .dashicons,
.viz-group h3 .dashicons {
	margin-right: 5px;
	vertical-align: -5px;
}

.viz-group-content {
	display: none;
	margin: 0;
	padding: 0;
	background-color: #fdfdfd;
}

div.viz-group-content {
	padding: 15px;
}

.viz-group.open > .viz-group-content {
	display: block;
}

.viz-group-description {
	margin: 0;
	padding: 5px;
	color: #555;
	font-size: 12px;
	text-align: left;
}

div.viz-group-content .viz-group-description {
	padding: 5px;
	font-family: "Montserrat",sans-serif;
	font-weight: 300;
}

.initial-screen .viz-group-description {
	padding: 0;
	padding: 10px 20px 20px;
	font-family: "Montserrat",sans-serif;
	font-weight: 300;
}

.viz-section-title {
	display: block;
	position: relative;
	margin-bottom: 5px;
	padding: 4px 20px;
	border-top: 1px solid #eee;
	border-bottom: 1px solid #eee;
	background-color: rgba(0, 0, 0, 0.02);
	box-shadow: 0 4px 4px -4px rgba(0, 0, 0, 0.1);
	font-weight: bold;
	cursor: pointer;
}

.viz-group-wrapper ul ul li .viz-section-title {
	margin-bottom: 0;
	border: none;
	box-shadow: none;
}

.viz-section-title::after {
	position: absolute;
	z-index: 1;
	top: 13px;
	right: 20px;
	width: 0;
	height: 0;
	border-width: 4px 4px 0;
	border-style: solid;
	border-color: #ccc transparent;
	content: "";
}

.viz-section-title.open::after {
	border-width: 0 4px 4px;
}

.section-items,
.viz-section-items {
	display: none;
	padding: 15px;
}

.viz-section-items.open {
	display: block;
}

.more-info {
	display: none;
	float: right;
	color: #21759b;
	font-size: 85%;
	font-weight: normal;
	text-decoration: none;
}

.viz-info-msg {
	font-weight: bold !important;
	font-style: italic;
}

.viz-info-msg::before {
	font-family: dashicons;
	content: "\f488";
	margin-right: 5px;
}

.viz-section-description {
	margin: 0;
	/*display: none;*/
	padding: 0;
	color: gray;
	font-size: 11px;
}

.viz-section-table {
	width: 100%;
}

.section-delimiter,
.viz-section-delimiter {
	margin: 15px 0;
	border-top: 1px dashed #ccc;
}

.viz-section-table-column {
	width: 50%;
	padding: 0 1px;
	text-align: left;
	vertical-align: top;
}

.viz-section-item {
	margin-bottom: 10px;
}

.control-select,
.control-text {
	width: 100%;
}

.control-check {
	float: right;
}

.control-check::after {
	clear: both;
}

.viz-section-description ul {
	margin: 0 0 0 25px;
	list-style: circle;
}

.viz-section-description li {
	margin: 0;
	list-style: circle;
}

#rate-the-plugin {
	margin-top: 40px;
	padding: 20px;
	border-top: 1px dashed #ddd;
	text-align: center;
}

.rate-the-plugin {
	width: 40% !important;
	margin-top: -5px;
}

#rate-stars {
	width: 100px;
	height: 20px;
	margin: 15px auto;
	background-image: url("../images/star.png");
	background-repeat: repeat-x;
	background-position: right center;
}

#rate-link {
	font-family: "Montserrat",sans-serif;
	font-weight: 400;
	text-decoration: none;
}

#flattr {
	margin-top: 15px;
	text-align: center;
}

#viz-tabs {
	display: none;
}

#viz-tabs.done {
	display: block;
}

#viz-tabs .ui-tabs-panel {
	padding: 0;
}

#viz-tabs .wp-color-picker {
  width: 4rem !important;
}

.viz-info-panel {
	display: flex;
	flex-direction: column;
	padding: 10px;
	gap: 10px;
}

.viz-info-panel label {
	margin: 0;
	padding: 0;
	font-weight: bold;
}

.viz-info-panel input {
	flex: 1;
}

.viz-info-panel .viz-info-item {
	display: flex;
	flex-direction: column;
	flex: 1;
	gap: 3px;
}

.viz-info-panel .viz-info-row {
	display: flex;
	flex-direction: row;
	gap: 5px;
}

/******************************************************************************/
/********************************  TOOLBAR  ***********************************/
/******************************************************************************/

#toolbar {
	overflow: hidden;
	position: absolute;
	z-index: 100;
	right: 0;
	bottom: 0;
	left: 0;
	height: 36px;
	padding: 12px 16px;
	border-top: 1px solid #dfdfdf;
	box-shadow: 0 -4px 4px -4px rgba(0, 0, 0, 0.1);
	text-align: center;
}

#toolbar .push-right {
	float: right;
	margin-right: 10px;
}

#toolbar .push-left {
	float: left;
}

.toolbar-div a {
	float: left;
}

.toolbar-div {
	display: inline-block;
	float: left;
	width: 30%;
	vertical-align: top;
}

#chart-select {
	display: flex;
	padding: 12px 8px;
	justify-content: center;
	align-items: center;
	gap: 12px;
}

#chart-select label {
	font-weight: bold;
}

/******************************************************************************/
/********************************  TYPE PICKER   ******************************/
/******************************************************************************/

.type-box span {
	display: block;
	position: absolute;
	right: 0;
	bottom: -6px;
	width: 100%;
	padding: 4px 0;
	border-top: 1px dashed #ddd;
	border-bottom: 1px dashed #ddd;
	background: #e0e0e0;
	background-color: #efefef;
	box-shadow: 0 0 8px #ddd;
	font-weight: bold;
	text-align: center;
}

.type-box .pro-upsell {
	color: #c55555;
}

#type-picker {
	width: 954px;
	margin: 50px auto;
}

.type-box {
	float: left;
	position: relative;
	margin: 0 20px 20px 0;
	border: 1px dashed #ddd;
	background-color: #efefef;
	box-shadow: 0 0 8px #ddd;
}

.type-box.viz-hidden {
	display: none;
}

.type-box.viz-hidden {
	display: none;
}

.type-box:nth-child(3n+1) {
	margin-right: 0;
}
/* ... */

